Added logo color changing based on user's set theme

--- a/assets/css/views/tantabus.css
+++ b/assets/css/views/tantabus.css
@@ -1,3 +1,10 @@
 i.favicon-home {
   vertical-align: middle;
+  background-image: unset !important;
+  background-color: var(--logo-color);
+  -webkit-mask-image: url("/favicon.svg");
+  mask-image: url("/favicon.svg");
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
 }
