--- a/assets/css/views/images.css
+++ b/assets/css/views/images.css
@@ -114,7 +114,7 @@ span.spoiler div.image-container {
   color: var(--image-show-link-color);
 }
 
-.dnp-warning a {
+.before-upload-warning a {
   color: var(--vote-down-color);
   font-weight: bold;
 }
@@ -130,8 +130,8 @@ div.image-container video {
   justify-content: center;
 }
 
-.dnp-warning a:hover {
-  color: var(--dnp-warning-hover-color);
+.before-upload-warning a:hover {
+  color: var(--before-upload-warning-hover-color);
 }
 
 .image-show-container:hover a:hover {
@@ -226,13 +226,13 @@ div.image-container video {
   margin-left: 1em;
 }
 
-.dnp-warning {
+.before-upload-warning {
   padding: 0.5em;
   border: 3px solid var(--vote-down-color);
   background: var(--admin-links-color);
 }
 
-.dnp-warning h4 {
+.before-upload-warning h4 {
   margin-top: 0.3em;
   margin-bottom: 0.2em;
 }
